fix: address report findings
Signed-off-by: Thiago Moura <thiagogcm@gmail.com>